[package]
name = "serde_bytes"
version = "0.11.2" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Optimized handling of `&[u8]` and `Vec<u8>` for Serde"
repository = "https://github.com/serde-rs/bytes"
documentation = "https://docs.serde.rs/serde_bytes/"
keywords = ["serde", "serialization", "no_std"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"
exclude = ["/sgx/*"]

[features]
default = ["std", "mesalock_sgx"]
std = ["serde/mesalock_sgx"]
alloc = ["serde/alloc"]
mesalock_sgx = ["sgx_tstd", "std"]

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#bincode = "1.0"
#serde_derive = "1.0"
#serde_test = "1.0"

[badges]
travis-ci = { repository = "serde-rs/bytes" }
